<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />
        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

    </PreferenceCategory>
    <PreferenceCategory android:title="Moje ustawienia">
        <SwitchPreference
            android:defaultValue="false"
            android:key="kolor"
            android:title="Zmień kolor aplikacji" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="email"
            android:title="Wyłącz przycisk wiadomości" />
    </PreferenceCategory>

</PreferenceScreen>